// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar render avatar ITypeAvatar.icon 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 20,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
      {
        "backgroundColor": "#2B78EE",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      {
        "color": "#FFFFFF",
        "fontFamily": "Neotis",
        "fontSize": 20,
      }
    }
  >
    
  </Text>
</View>
`;

exports[`Avatar render avatar ITypeAvatar.text 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 20,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
      {
        "backgroundColor": "#2B78EE",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFFFFF",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
          "minHeight": 16,
        },
        undefined,
      ]
    }
  >
    ИП
  </Text>
</View>
`;

exports[`Avatar render avatar badge counter 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 20,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
      {
        "backgroundColor": "#2B78EE",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 9,
          "height": 18,
          "justifyContent": "center",
          "minWidth": 18,
          "zIndex": 1,
        },
        {
          "bottom": -3,
          "position": "absolute",
          "right": -3,
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 10,
            "lineHeight": 14,
            "minHeight": 14,
          },
          {
            "color": "#F54C3D",
            "paddingHorizontal": 4,
            "textAlign": "center",
          },
        ]
      }
    >
      6
    </Text>
  </View>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFFFFF",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
          "minHeight": 16,
        },
        undefined,
      ]
    }
  >
    ИП
  </Text>
</View>
`;

exports[`Avatar render avatar badge indicator 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 20,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
      {
        "backgroundColor": "#2B78EE",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "borderColor": "#FFFFFF",
          "borderRadius": 4.5,
          "borderWidth": 1,
          "height": 9,
          "position": "absolute",
          "width": 9,
          "zIndex": 1,
        },
        {
          "backgroundColor": "#F54D3D",
        },
        {
          "bottom": 2,
          "right": 2,
        },
      ]
    }
  />
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFFFFF",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
          "minHeight": 16,
        },
        undefined,
      ]
    }
  >
    ИП
  </Text>
</View>
`;

exports[`Avatar render avatar badge null 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 20,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
      {
        "backgroundColor": "#2B78EE",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFFFFF",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
          "minHeight": 16,
        },
        undefined,
      ]
    }
  >
    ИП
  </Text>
</View>
`;

exports[`Avatar render avatar badge status 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 20,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
      {
        "backgroundColor": "#2B78EE",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      {
        "bottom": 0,
        "color": "#FAB742",
        "fontFamily": "Neotis",
        "fontSize": 12,
        "position": "absolute",
        "right": 0,
        "zIndex": 1,
      }
    }
  >
    
  </Text>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFFFFF",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
          "minHeight": 16,
        },
        undefined,
      ]
    }
  >
    ИП
  </Text>
</View>
`;

exports[`Avatar render avatar disabled 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 20,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
      {
        "backgroundColor": "#2B78EE",
      },
      undefined,
      {
        "opacity": 0.5,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFFFFF",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
          "minHeight": 16,
        },
        undefined,
      ]
    }
  >
    ИП
  </Text>
</View>
`;

exports[`Avatar render avatar not photo 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 20,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
      {
        "backgroundColor": "#2B78EE",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <Image
    accessibilityLabel="imageAvatar"
    onError={[Function]}
    source={
      {
        "headers": undefined,
        "uri": "https://vraki.net/",
      }
    }
    style={
      {
        "borderRadius": 20,
        "height": 40,
        "width": 40,
      }
    }
  />
</View>
`;

exports[`Avatar render avatar with photo L 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 30,
        "height": 60,
        "justifyContent": "center",
        "width": 60,
      },
      {
        "backgroundColor": "#2B78EE",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <Image
    accessibilityLabel="imageAvatar"
    onError={[Function]}
    source={
      {
        "headers": undefined,
        "uri": "https://vraki.net/sites/default/files/inline/images/30_55.jpg",
      }
    }
    style={
      {
        "borderRadius": 30,
        "height": 60,
        "width": 60,
      }
    }
  />
</View>
`;

exports[`Avatar render avatar with photo S 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 12,
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      },
      {
        "backgroundColor": "#2B78EE",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <Image
    accessibilityLabel="imageAvatar"
    onError={[Function]}
    source={
      {
        "headers": undefined,
        "uri": "https://vraki.net/sites/default/files/inline/images/30_55.jpg",
      }
    }
    style={
      {
        "borderRadius": 12,
        "height": 24,
        "width": 24,
      }
    }
  />
</View>
`;

exports[`Avatar render avatar with photo XL 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 40,
        "height": 80,
        "justifyContent": "center",
        "width": 80,
      },
      {
        "backgroundColor": "#2B78EE",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <Image
    accessibilityLabel="imageAvatar"
    onError={[Function]}
    source={
      {
        "headers": {
          "test": "test token",
        },
        "uri": "https://vraki.net/sites/default/files/inline/images/30_55.jpg",
      }
    }
    style={
      {
        "borderRadius": 40,
        "height": 80,
        "width": 80,
      }
    }
  />
</View>
`;

exports[`Avatar render avatar with photo without size 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 20,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
      {
        "backgroundColor": "#2B78EE",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <Image
    accessibilityLabel="imageAvatar"
    onError={[Function]}
    source={
      {
        "headers": undefined,
        "uri": "https://vraki.net/sites/default/files/inline/images/30_55.jpg",
      }
    }
    style={
      {
        "borderRadius": 20,
        "height": 40,
        "width": 40,
      }
    }
  />
</View>
`;

exports[`Avatar render avatar without firstName 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 20,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
      {
        "backgroundColor": "#FA9247",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFFFFF",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
          "minHeight": 16,
        },
        undefined,
      ]
    }
  >
    П
  </Text>
</View>
`;

exports[`Avatar render avatar without firstName and lastName 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 20,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
      {
        "backgroundColor": "#FAB742",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      {
        "color": "#FFFFFF",
        "fontFamily": "Neotis",
        "fontSize": 20,
      }
    }
  >
    
  </Text>
</View>
`;

exports[`Avatar render without avatar border 1`] = `null`;
